[gd_scene load_steps=4 format=3 uid="uid://cvllnj730yuhi"]

[ext_resource type="Script" path="res://MultiplayerController.gd" id="1_ni5mq"]
[ext_resource type="Script" path="res://ServerBrowser.gd" id="2_wump5"]
[ext_resource type="PackedScene" uid="uid://csfvy6xgpdwma" path="res://server_info.tscn" id="3_1apt4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ni5mq")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 43.0
offset_right = 74.0
offset_bottom = 74.0
text = "HOST
"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 43.0
offset_right = 232.0
offset_bottom = 74.0
text = "START GAME
"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 43.0
offset_right = 122.0
offset_bottom = 74.0
text = "JOIN"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 1.0
offset_right = 289.0
offset_bottom = 34.0

[node name="Label" type="Label" parent="LineEdit"]
layout_mode = 0
offset_left = -53.0
offset_top = 3.0
offset_right = -6.0
offset_bottom = 29.0
text = "Name"

[node name="ServerBrowser" type="Control" parent="."]
anchors_preset = 0
offset_left = 1.0
offset_right = 41.0
offset_bottom = 40.0
script = ExtResource("2_wump5")
serverInfo = ExtResource("3_1apt4")

[node name="BroadcastTimer" type="Timer" parent="ServerBrowser"]

[node name="Label" type="Label" parent="ServerBrowser"]
layout_mode = 0
offset_left = 258.0
offset_top = 3.0
offset_right = 313.0
offset_bottom = 29.0

[node name="Panel" type="Panel" parent="ServerBrowser"]
layout_mode = 0
offset_left = 14.0
offset_top = 82.0
offset_right = 276.0
offset_bottom = 175.0

[node name="Server Info" parent="ServerBrowser/Panel" instance=ExtResource("3_1apt4")]
layout_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 273.0
offset_top = 40.0
offset_right = 313.0
offset_bottom = 79.0
text = "TAD"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="timeout" from="ServerBrowser/BroadcastTimer" to="ServerBrowser" method="_on_broadcast_timer_timeout"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
